Fix unalignment missing tmp directory (must be writable) and https widgets

--- a/media/css/cover_style.css
+++ b/media/css/cover_style.css
@@ -59,8 +59,8 @@ body {
 	border: 4px solid white;
 	padding: 1px;
 	position: absolute;
-	top: 195px;
-	left: 24px;
+	top: 172px;
+	left: 15px;
 }
 #content_inner.facebook.special #canvas_picture {
 	top: 211px;
@@ -73,25 +73,7 @@ body {
 }
 #content_inner.facebook {
 	width: 851px;
-	height: 370px;
-}
-#content_inner.google {
-	margin-top: 10px;
-	width: 940px;
-	height: 250px;
-}
-#content_inner.google #canvas_cover {
-	top: 44px;
-	position: relative;
-}
-#content_inner.google #canvas_picture {
-	background-color: #FFF;
-	border: 1px solid #CCC;
-	padding: 5px;
-	-webkit-border-radius: 3px;
-	left: 622px;
-	position: absolute;
-	top: 0;
+	height: 385px;
 }
 
 #save {
